--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,15 +1,25 @@
 {
   "scripts": {
-    "start": "nodemon server.ts"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22"
+    "start": "nodemon ./src/app.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.3",
+    "@types/jest": "^29.5.2",
+    "@types/pg": "^8.10.2",
+    "@types/supertest": "^2.0.12",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jest": "^29.6.0",
+    "pg": "^8.11.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "mongoose": "^7.3.1",
+    "nodemon": "^2.0.22"
   }
 }
