--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon ./src/app.ts"
+    "start": "nodemon ./src/server.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
